--- a/source/requirements.txt
+++ b/source/requirements.txt
@@ -5,3 +5,4 @@ sphinx-jsonschema==1.16.8
 #sphinx-rtd-dark-mode==1.3.0
 #pydata_sphinx_theme==0.15.4
 sphinx-book-theme==1.1.3
+sphinx-new-tab-link==0.6.1
